--- a/conf/broker.conf
+++ b/conf/broker.conf
@@ -26,15 +26,15 @@ autoCreateTopicEnable=true
 # nameServ地址
 namesrvAddr=127.0.0.1:9876
 # 存储路径
-storePathRootDir=E:\\RocketMQ\\data\\rocketmq\\dataDir
+storePathRootDir=E:\\workerspace\\RocketMQ\\data\\rocketmq\\dataDir
 # commitLog路径
-storePathCommitLog=E:\\RocketMQ\\data\\rocketmq\\dataDir\\commitlog
+storePathCommitLog=E:\\workerspace\\RocketMQ\\data\\rocketmq\\dataDir\\commitlog
 # 消息队列存储路径
-storePathConsumeQueue=E:\\RocketMQ\\data\\rocketmq\\dataDir\\consumequeue
+storePathConsumeQueue=E:\\workerspace\\RocketMQ\\data\\rocketmq\\dataDir\\consumequeue
 # 消息索引存储路径
-storePathIndex=E:\\RocketMQ\\data\\rocketmq\\dataDir\\index
+storePathIndex=E:\\workerspace\\RocketMQ\\data\\rocketmq\\dataDir\\index
 # checkpoint文件路径
-storeCheckpoint=E:\\RocketMQ\\data\\rocketmq\\dataDir\\checkpoint
+storeCheckpoint=E:\\workerspace\\RocketMQ\\data\\rocketmq\\dataDir\\checkpoint
 # abort文件存储路径
-abortFile=E:\\RocketMQ\\data\\rocketmq\\dataDir\\abort
+abortFile=E:\\workerspace\\RocketMQ\\data\\rocketmq\\dataDir\\abort
 
